[package]
name = "addr_finder"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9"
rand_chacha = "0.9"
secp256k1 = { version = "0.31", features = ["rand", "global-context"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
hex = "0.4"
num_cpus = "1.16"
sha2 = "0.10"
ripemd = "0.1"
ripple-address-codec = "0.1"